--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-server": "^3.9.0",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "luxon": "^2.4.0",
     "mongoose": "^6.4.3",
     "nodemon": "^2.0.19"
   },
