--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec babel-node src/index.js -e js,gql",
-    "start": "babel-node src/index.js"
+    "start": "node dist/index.js",
+    "build": "babel src -d dist --copy-files"
   },
   "dependencies": {
     "@graphql-tools/load-files": "^6.6.0",
